Fix code sections in dark mode

--- a/css/theme.css
+++ b/css/theme.css
@@ -225,5 +225,5 @@ table {
 }
 
 h2 code.highlighter-rouge {
-    color: rgb(33, 37, 41);
+    color: var(--bs-heading-color);
 }
